fix small text spacing

--- a/Sass/mobile.scss
+++ b/Sass/mobile.scss
@@ -180,7 +180,7 @@
             font-size: 1rem;
             &:nth-child(2) {
               // padding: 0 15px;
-              padding: 0 8px;
+              margin: 0 5px;
             }
           }
         }
